objects/LAT_Provider__c.object
<CustomObject>
    <fields>
        <fullName>CNPJ__c</fullName>
        <label>CNPJ</label>
        <length>14</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract__c</fullName>
        <label>Número do contrato</label>
        <referenceTo>LAT_Contract2__c</referenceTo>
        <relationshipLabel>Fornecedores indicados PRB</relationshipLabel>
        <relationshipName>LAT_Providers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Provider__c</fullName>
        <label>Fornecedor</label>
        <type>TextArea</type>
    </fields>
    <label>Fornecedor</label>
    <nameField>
        <displayFormat>FOR-{000000}</displayFormat>
        <label>ID Fornecedor</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Fornecedores indicados PRB</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>